--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="home__img">    
-                    <img src="img\me2.png" alt="">
+                    <img src="img\me2.jpg" alt="">
                 </div>
             </section>
 
